# small_business

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  init_business.md  mkdocs.yml  plan.md  pyproject.toml  updates.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: mkdocs.yml
data/config/: chart_of_accounts.yaml
docs/: CHANGELOG.md  index.md
docs/api_docs/: hello_world.md
docs/notebooks/: 01_complete_workflow.py  02_expenses_and_bank_imports.py  03_reconciliation_and_reporting.py  04_financial_reporting.py  example.py
docs/plans/: 2025-11-15-phase1-datastructures-design.md  2025-11-15-phase2-bank-imports.md  2025-11-15-phase3-expense-classification.md  2025-11-16-phase4-income-management.md  2025-11-16-phase5-reporting-compliance.md  2025-11-16-phase6-polish-enhancement.md  2025-11-23-phase4-revisions-design.md  2025-11-23-storage-refactor-design.md  2025-11-30-chart-of-accounts-yaml-loading.md  2025-12-20-ui-architecture-analysis.md
docs/usage/: bank-import.md  expense-classification.md
examples/: init_new_business.py
src/small_business/: __init__.py  init_business.py  workflows.py
test_business/config/: settings.json
tests/: test_init_business.py  test_workflows.py
tests/bank/: test_converter.py  test_duplicate.py  test_import_workflow.py  test_models.py  test_parser.py
tests/classification/: test_applicator.py  test_classifier.py  test_e2e_classification.py  test_learner.py  test_matcher.py  test_models.py  test_rule_store.py  test_storage_integration.py  test_workflow.py
(+106 files in other folders)
