[project]
name = "small_business"
authors = [{ name = "Harry Eslick", email = "h.eslick@gmail.com" }]
description = "small bussiness acount and job management"
readme = "README.md"
requires-python = ">=3.13"

dynamic = ["version"]
dependencies = [
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "matplotlib>=3.10.1",
    "rich",
    "pydantic[email]>=2.0.0",
    "docxtpl>=0.20.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.47",
    "mkdocs-jupyter>=0.25.1",
    "mkdocstrings[python]>=0.27.0",
    "bandit[toml]==1.7.5",
    "pre-commit==3.3.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.0.0",
    "pytest-github-actions-annotate-failures",
    "plotly>=5.24.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "ruff>=0.14.5",
]

# [project.urls]
# Documentation = "https://harryeslick.github.io/"
# Source = "https://github.com/harryeslick/"


[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = false

[tool.coverage.run]
branch = true


[tool.pytest.ini_options]

pythonpath = ["src"]
testpaths = "tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/small_business/__init__.py"
